<resources>
    <string name="app_name">Projet Fiesta</string>
    <string name="action_settings">Settings</string>
    <string name="email">E-mail</string>
    <string name="creer_le_trajet">CRÉER LE TRAJET</string>
    <string name="heure_depart">Heure de départ (environ)</string>
    <string name="nb_places">Nombre de places</string>
    <string name="nb_placesdestination">Destination</string>
    <string name="nom_conducteur">Nom du conducteur</string>
    <string name="sobre_responsable">Je m\'engage à rester sobre et responsable</string>
    <string name="trajet_insere">Trajet inséré</string>
    <string name="utilisateur_insere">Utilisateur inséré</string>
    <string name="nom_existant">Nom d\'utilisateur déjà existant</string>
    <string name="sobriete_obligatoire">Tu dois t\'engager à rester sobre et responsable !</string>
    <string name="email_invalide">Adresse e-mail invalide</string>
    <string name="heure_invalide">Heure invalide (le format de l\'heure doit être le suivant : hh:mm)</string>
    <string name="destination_vide">Entrer une destination</string>
    <string name="nbPlaces_vide">Entrer un nombre de places</string>
    <string name="nom_vide">Entrer un nom</string>
    <string name="inscription_conducteur">Je m\'inscris comme conducteur</string>
    <string name="contacterConducteurConfirmation">Vous devez confirmer votre course par message. <b>Dites \"bonjour\" à votre futur conducteur :-)</b></string>
    <string name="depart">Départ</string>
    <string name="nb_placesRacc">Nbre places</string>
    <string name="Destination">Destination</string>
    <string name="contacter">CONTACTER </string>
    <string name="votreMessage">Votre message...</string>
    <string name="envoyer">ENVOYER</string>
    <string name="seLoguer">Déjà membre ? Logue-toi !</string>
    <string name="inscription">Inscris-toi en 2 minutes !</string>
    <string name="introDemarrage">Bienvenue sur l\'application de co-voiturage du Label Fiesta Valais, Suisse.</string>
    <string name="contacterConducteur">Contacter</string>
    <string name="password">Mot de passe</string>
    <string name="login">Nom d\'utilisateur</string>
    <string name="connexion">Connexion</string>
    <string name="place">" place"</string>
    <string name="places">" places"</string>
    <string name="msgInscription">Veuillez renseigner tous les champs, svp, pour que l\'inscription soit prise en compte.</string>
    <string name="prenom">Prénom</string>
    <string name="dateNaissance">Date de naissance</string>
    <string name="nom">Nom</string>
    <string name="jeMenregistre">Je m\'enregistre</string>
    <string name="trouver">TROUVER UNE VOITURE</string>
    <string name="etatTrajets0">"Actuellement aucun conducteur n'est inscrit pour rentrer de %s. "</string>
    <string name="etatTrajets0B">Repassez plus tard afin de voir si des chauffeurs sont disponibles !</string>

    <!-- TEMPORAIRE : Je dois rendre ce string dynamique pour qu'il corresponde à chaque trajet  NTS -->
    <string name="etattransport">Actuellement 6 conducteurs sont inscrits et 11 places sont disponibles pour rentrer de la Foire du Valaus. Prenez contact pour la destination qui vous convient !</string>
    <string name="chargement">Chargement en cours</string>
    <string name="destination">Destination</string>
    <string name="txtCreerTrajet">Vous êtes sur le point de créer une offre de trajet. <b>De ce fait, vous vous engagez à rester sobre lors de cet événement.</b></string>

    <string name="autres_transports">AUTRES TRANSPORTS</string>
    <string name="toastChampsIncomplet">Tous les champs ne sont pas remplis.</string>
    <string name="toastEmailInvalide">E-mail invalide.</string>
    <string name="toastMdpCourt">Mot de passe trop court (8 caractères minimum).</string>
    <string name="toastDateNum">La date ne contient pas que des caractères numériques.</string>
    <string name="toastInscriptionOk">Votre inscription a été prise en compte.</string>
    <string name="toastConnexionOk">Vous allez être connecté.</string>
    <string name="toastConnexionEchec">Essayez à nouveau.</string>
    <string name="environ">~</string>
    <string name="msgFiesta">Le Label Fiesta est un concept de réduction des risques en milieu festif. Il est décerné aux manifestations, clubs et salles de concert qui s\'engagent à mettre en place des mesures concrètes de prévention allant de la protection de la jeunesse au renforcement de la sécurité en passant par la prise en compte de l\'environnement. Le Label permet ainsi d\'identifier les organisateurs ou gérants d\'établissements publics ayant développé une véritable éthique de la fête.</string>
    <string name="title">Co-voiturage Fiesta</string>
    <string name="editer">Editer</string>
    <string name="annuler">Annuler</string>
    <string name="corrigerTransport">Corriger le trajet</string>
    <string name="alert_editTransport">Editer le trajet</string>
    <string name="heureDefini">L\'heure de départ a été défini à</string>
    <string name="placesRedefini">Le nombre de places disponibles a été défini à</string>

</resources>
