<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.androidprojects.projetfiesta.demarrage.ActiviteInscription"
    android:onClick="mEnregistre">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="true"
            android:orientation="vertical">



            <LinearLayout
                android:background="@drawable/fond"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/ivTop"
                    android:src="@drawable/car_top"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/msg_angle_arrondi"
                    android:textColor="@color/rouge_texte"
                    android:textAlignment="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/msgInscription"
                    android:id="@+id/textView" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/form_angle_arrondi"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/blanc"
                    android:textColor="@color/blanc"
                    android:hint="@string/nom"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/etNom" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/form_angle_arrondi"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/blanc"
                    android:textColor="@color/blanc"
                    android:hint="@string/prenom"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/etPrenom" />


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/form_angle_arrondi"
                    android:inputType="number"
                    android:textColorHint="@color/blanc"
                    android:textColor="@color/blanc"
                    android:hint="@string/dateNaissance"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/etDateNaissance" />


                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/form_angle_arrondi"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/blanc"
                    android:textColor="@color/blanc"
                    android:hint="@string/email"
                    android:textAppearance="?android:attr/textAppearanceSmall" >
                </EditText>

                <EditText
                    android:id="@+id/etMDP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/form_angle_arrondi"
                    android:inputType="textPassword"
                    android:textColorHint="@color/blanc"
                    android:textColor="@color/blanc"
                    android:hint="@string/password"
                    android:textAppearance="?android:attr/textAppearanceSmall" >
                </EditText>


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/jeMenregistre"
                    android:background="@drawable/bouton_arrondi"
                    android:id="@+id/btnLogin"
                    android:gravity="center"
                    android:onClick="mEnregistre" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
