<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.androidprojects.projetfiesta.AfficherTrajet">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="true"
            android:orientation="vertical">



            <LinearLayout
                android:background="@drawable/fond"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:id="@+id/ivTop"
                    android:src="@drawable/car_top"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/angle_arrondi"
                    android:textColorHint="#8e8b8b"
                    android:textColor="#730C07"
                    android:hint="@string/login"
                    android:textAppearance="?android:attr/textAppearanceSmall" >
                </EditText>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/angle_arrondi"
                    android:textColorHint="#8e8b8b"
                    android:textColor="#730C07"
                    android:hint="@string/password"
                    android:textAppearance="?android:attr/textAppearanceSmall" >
                </EditText>


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/connexion"
                    android:background="@drawable/bouton_arrondi"
                    android:id="@+id/btnLogin"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/inscription"
                    android:paddingTop="40dp"
                    android:id="@+id/tvInscription"
                    android:layout_gravity="center_horizontal" />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
