<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:fitsSystemWindows="true"
    tools:context=".AfficherTrajets"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="377dp"
        android:layout_height="106dp"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center"
        android:weightSum="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:id="@+id/ivTop"
            android:src="@drawable/car_top" />

        <LinearLayout
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/tvDateEvenement"
                android:gravity="center_vertical"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:id="@+id/tvNomEvenement"
                android:gravity="center_vertical"
                />
    </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/trouver"
        android:textSize="@dimen/texte_grand"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="343dp"
        android:layout_height="99dp"
        android:background="@drawable/angle_arrondi"
        android:textColor="#730C07"
        android:layout_marginTop="10dp"
        android:text="@string/etattransport"
        android:id="@+id/etatTrajets"
        android:layout_gravity="center"
        />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        >

        <ListView

            android:layout_width="wrap_content"
            android:layout_height="258dp"
            android:id="@+id/listViewTrajets"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:divider="@color/blanc"
            android:dividerHeight="@dimen/ligne_epaisseur"
            android:layout_marginTop="10dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inscription_conducteur"
            android:id="@+id/button" android:layout_gravity="center_horizontal"/>
    </LinearLayout>
    </LinearLayout>

