<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".demarrage.ActiviteNonLogue">




    <LinearLayout
        android:background="@drawable/fond"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:id="@+id/ivTop"
            android:src="@drawable/car_top"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/msg_angle_arrondi"
                android:textColor="@color/rouge_texte"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:text="@string/introDemarrage"
                android:id="@+id/textView" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="vertical"
        android:layout_weight="0"
        android:gravity="fill_vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/seLoguer"
            android:background="@drawable/bouton_arrondi"
            android:id="@+id/btnLogin"
            android:layout_gravity="center_vertical"
            android:onClick="seLoguer" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inscription"
            android:background="@drawable/bouton_arrondi"
            android:id="@+id/btnNouvelUser"
            android:layout_gravity="center_vertical"
            android:onClick="sEnregistrer" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:layout_margin="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageFiesta"
            android:background="@color/blanc"
            android:src="@drawable/fiesta"
            android:tag="http://www.labelfiesta.ch"
            android:onClick="openBrowser"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageAddictionVs"
            android:src="@drawable/addiction_valais"
            android:background="@color/blanc"
            android:tag="http://www.addiction-valais.ch"
            android:onClick="openBrowser"/>


    </LinearLayout>



</LinearLayout>