<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/chatLayout"
    android:layout_height="match_parent"
    tools:context="com.androidprojects.projetfiesta.Chat">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"></include>



    <include layout="@layout/en_tete"/>


    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:columnCount="5"
        android:rowCount="4">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/cab"
            android:layout_marginRight="40dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_rowSpan="2"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/depart"
            android:id="@+id/tvTxtDepart"
            android:layout_row="0"
            android:layout_column="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            android:id="@+id/tvDepart"
            android:layout_row="0"
            android:layout_column="3" />

        <EditText
            android:id="@+id/editText_HeureD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/form_angle_arrondi"
            android:inputType="time"
            android:textColorHint="@color/blanc"
            android:textColor="@color/blanc"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_row="0"
            android:layout_column="3"
            >
        </EditText>

        <ImageButton
            android:id="@+id/btnUpdateH"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/bouton_arrondi"
            android:layout_row="0"
            android:layout_column="4"
            android:onClick="update_heureD"
            android:src="@drawable/icon_update"
            android:scaleType="fitStart"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginRight="20dp"
            android:text="@string/nb_placesRacc"
            android:id="@+id/tvTxtNbPlace"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_gravity="center_vertical" />



        <ViewStub
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/viewStub"
            android:layout_row="2"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginRight="30dp"
            android:textStyle="bold"
            android:id="@+id/tvNbPlace"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_gravity="center_vertical" />

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginRight="30dp"
            android:textStyle="bold"
            android:id="@+id/numberPicker_places"
            android:layout_gravity="center_vertical"
            android:layout_row="1"
            android:layout_column="3"
            />

        <ImageButton
            android:id="@+id/btnUpdateNbP"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/bouton_arrondi"
            android:layout_row="1"
            android:layout_column="4"
            android:onClick="update_nbPlaces"
            android:src="@drawable/icon_update"
            android:scaleType="fitStart"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            android:id="@+id/tvNomConducteur"
            android:layout_row="3"
            android:layout_column="0" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/destination_icon"
            android:layout_row="3"
            android:layout_column="2"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            android:id="@+id/tvDestination"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_marginLeft="20dp"
            android:layout_columnSpan="3"
            />

    </GridLayout>




    <View
        style="@style/LigneSeparation"
        android:layout_margin="@dimen/fab_margin"
        android:layout_weight="0.001"/>

    <ListView
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:dividerHeight="0dp"
        android:divider="@null"
        android:id="@+id/listView"
        android:layout_weight="0.6"

        android:stackFromBottom="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/blanc"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_weight="0.01">
        <EditText
            android:background="@drawable/edittext_rectangle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/hauteur_ligne"
            android:layout_margin="@dimen/fab_margin"
            android:inputType="textMultiLine"
            android:hint="@string/votreMessage"
            android:textSize="15dp"
            android:paddingLeft="@dimen/fab_margin"
            android:gravity="center_vertical"
            android:textColorHint="@color/rouge_texte"
            android:textColor="@color/rouge_texte"
            android:id="@+id/etMessage"
            android:layout_weight="0.7"/>

        <ImageButton
            android:layout_width="@dimen/hauteur_ligne"
            android:layout_height="@dimen/hauteur_ligne"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:background="@color/blanc"
            android:src="@drawable/paper_plane"
            android:id="@+id/btnEnvoyer"
            android:onClick="insert" />
    </LinearLayout>
</LinearLayout>